// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableText should render 1`] = `
<Translate(EditableText)
  onEdit={[Function]}
  onSubmit={[Function]}
  text="my text"
/>
`;

exports[`EditableText should render InlineForm 1`] = `
<Translate(EditableText)
  editMode={true}
  onEdit={[Function]}
  onSubmit={[Function]}
  text="my text"
/>
`;

exports[`EditableText should render inProgress 1`] = `
<Translate(EditableText)
  inProgress={true}
  onEdit={[Function]}
  onSubmit={[Function]}
  text="my text"
/>
`;

exports[`EditableText should render skeleton 1`] = `
<Translate(EditableText)
  loading={true}
  onEdit={[Function]}
  onSubmit={[Function]}
  text="my text"
/>
`;

exports[`InlineForm should render 1`] = `
<form
  className="theme-tc-editable-text-form tc-editable-text-form"
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="theme-tc-editable-text-form-input tc-editable-text-form-input form-control"
      id="inputTitle"
      onChange={[Function]}
      type="text"
      value="my text"
    />
  </div>
  <div
    className="theme-tc-editable-text-form-buttons tc-editable-text-form-buttons"
  >
    <Action
      bsStyle="link"
      className="theme-tc-editable-text-form-buttons-icon tc-editable-text-form-buttons-icon"
      disabled={false}
      hideLabel={true}
      icon="talend-check"
      label={undefined}
      name="action-submit-title"
      onClick={[Function]}
      type="submit"
    />
    <Action
      bsStyle="link"
      className="theme-tc-editable-text-form-buttons-icon tc-editable-text-form-buttons-icon"
      hideLabel={true}
      icon="talend-cross"
      label={undefined}
      name="action-cancel-title"
      onClick={[Function]}
    />
  </div>
</form>
`;
